Finished up overall media queries for 700+
700- still needs menu work, icon abbreviations, and stacked images -500

--- a/Index.html
+++ b/Index.html
@@ -214,6 +214,7 @@ $(document).ready(function() {
 				<li><a class="link portfoliolink" href="#portfolio">Portfolio</a></li>
 				<li><a class="link resumelink" href="#resume">Resume</a></li>
 				<li><a class="link contactlink" href="#header_8">Contact</a></li>
+                <li><a href="#" id="navbtn"><img src="images/menu.png" width="20px" height="23px"></a></li>
 			</ul>
         
             <ul class="portfolionav">
