added mobile menu system
Still need to format content for mobile and menu system is not pretty
but it works in it’s most basic form.

--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,13 @@
        $('body').localScroll({
           target:'body'
        });       
+       
+          $("#navbtn").click(function() {
+           $("a.link").toggleClass("show");
+            $("#navbtn").addClass("activenav");
+
+          });
+       
         // Page Triggers
         $(window).on('scroll', function() {
             var y_scroll_pos = window.pageYOffset;
