Updated more 320 and 480 width positions and cleaned things up

--- a/Index.html
+++ b/Index.html
@@ -771,8 +771,8 @@ $(document).ready(function() {
                     <h2><span class="labeltext">Client: </span>Debt Reduction Services</h2>
                     <h3><span class="labeltext">Project: </span> Display Ads</h3>
                     <p>Designed 30+ ad creatives for Flash (animation and expanding) and static banner display advertising with locally and nationally targeted campaigns.</p>
-                   <a class="readmore"  href="images/portfolio/flash/drs_flashex1.html" target="_blank">Flash Creative 1</a>
-					<a class="readmore"  href="images/portfolio/flash/drs_flashex2.html" target="_blank" style="margin-left: 20px;">Flash Creative 2</a>
+                   <a class="readmore"  href="images/portfolio/flash/drs_flashex1.html" target="_blank">Creative 1</a>
+					<a class="readmore"  href="images/portfolio/flash/drs_flashex2.html" target="_blank" style="margin-left: 20px;">Creative 2</a>
                 </div><!--End Project info-->
             </div><!--End Portfolio Listing-->
          
