Copy edits and new portfolio item
Added mcp email

--- a/Index.html
+++ b/Index.html
@@ -406,7 +406,7 @@ $(document).ready(function() {
             <ul>
                   <li>Social Campaigns</li>
                   <li>Social Branding</li>
-                  <li>Email Newsletters</li>
+                  <li>Email marketing</li>
             </ul>
             <ul>
                  <li>Display Ads</li>
@@ -733,6 +733,17 @@ $(document).ready(function() {
         <div id="marketing" class="web portfolio-section" style="height: 60px;">
             <h1>Marketing work</h1>
         </div><!--End Portfolio Section-->
+        
+         <div class="proj-mvaemail portfolio-listing">
+                <img class="portfoliophoto nudge" src="images/portfolio/mvaemail.png" alt="MVA-MCP Email Design and Code" />
+                <div class="project-info">
+                    <h2><span class="labeltext">Client: </span>Microsoft</h2>
+                    <h3  class="via"><span class="labeltext">Via:</span> R2integrated</h3>
+                    <h3><span class="labeltext">Project: </span> Email Design &amp; code</h3>
+                    <p>Illustrated, designed and coded a set of emails for a targeted campaign with personalized content.</p>
+                    <a class="fancybox"  href="images/portfolio/mcpemail-full.jpg"><p class="readmore">Example</p></a> 
+                </div><!--End Project info-->
+            </div><!--End Portfolio Listing-->
         
           <div class="proj-r2iemail portfolio-listing">
                 <img class="portfoliophoto nudge" src="images/portfolio/r2i-email.jpg" alt="R2integrated Responsive Email Template" />
